# MobPaint

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  config.json  install.sh  requirements.txt
include/: app.h  assets.h  config.h  logs.h  sidebar.h
include/context/: config.h  history.h  logs.h  paint_context.h
include/tools/: tools.h
src/: app.c  assets.c  config.c  logs.c  main.c  sidebar.c
src/context/: config.c  history.c  logs.c  paint_context.c
src/tools/: tools.c
